--- a/styles/index.css
+++ b/styles/index.css
@@ -114,7 +114,13 @@ body {
 .header__contacts {
   display: flex;
   flex-shrink: 0;
+  align-items: center;
   column-gap: 0.625rem;
+  transition: color 0.3s;
+}
+
+.header__contacts:hover {
+  color:#5c8ee5;;
 }
 
 .header__contacts-icon {
@@ -129,6 +135,8 @@ body {
   color: inherit;
   text-decoration: none;
 }
+
+
 
 .logo__image {
   width: 9rem;
@@ -159,6 +167,10 @@ body {
 
 .button--cta {
   padding: 1.125rem 2.8125rem;
+}
+
+.button-modal {
+  width: 100%;
 }
 
 .button:hover {
@@ -798,6 +810,11 @@ body.is-lock {
   column-gap: 1.9rem;
 }
 
+.cta__form-footer--vertical {
+  flex-direction: column;
+  row-gap: 30px;
+}
+
 .cta__form-notify {
   font-size: 12px;
   line-height: 1.6;
@@ -819,12 +836,23 @@ body.is-lock {
   column-gap: 1.875rem;
 }
 
+.input__group-wrapper--vertical {
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
 .input__group {
   position: relative;
   margin-block-end: 1.875rem;
   height: 4.125rem;
   flex-grow: 1;
   background-color: #f0f2f5;
+}
+
+/* попробую накинуть родителю бг колор*/
+.input__group--modal {
+  background-color: #fafbfc;
+  border: 1px solid #e4e4eb;
 }
 
 .input__group:last-child {
@@ -839,6 +867,11 @@ body.is-lock {
   border: 1px solid #e4e4eb;
   background-color: transparent;
   transition: border-color 0.3s;
+}
+
+.input__group-input--modal {
+  background-color: #fafbfc;
+  border: 1px solid #e4e4eb;
 }
 
 .input__group-input:focus-visible {
@@ -893,6 +926,7 @@ body.is-lock {
   display: flex;
   column-gap: 2.3rem;
   align-items: center;
+    transition: color 0.3s;
 }
 
 .footer__phone {
@@ -900,6 +934,12 @@ body.is-lock {
   line-height: 1.6;
   text-decoration: underline;
   white-space: nowrap;
+  transition: color 0.3s;
+}
+
+.footer__phone:hover,
+.footer__address :hover {
+color: #5c8ee5;
 }
 
 .footer__bottom {
@@ -994,6 +1034,69 @@ body.is-lock {
   line-height: 1.6;
 }
 
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(41, 45, 51, 0.5);
+  z-index: 10;
+  transition: opacity 0.3s;
+}
+
+.modal__dialog {
+  position: relative;
+  max-width: 28.75rem;
+  background-color: #fafbfc;
+  padding: 2.5rem 3.125rem;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.modal.is-open .modal__dialog {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal.is-open {
+  opacity: 100%;
+  visibility: visible;
+  transform: translateX(0);
+}
+
+.modal__title {
+  font-family: 'Bebas Neue';
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 1.2;
+  color: #292d33;
+  margin-bottom: 30px;
+}
+
+.modal__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #828a99;
+  margin-bottom: 30px;
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 44px;
+  right: 48px;
+  padding: 12px 16px;
+  background-color: transparent;
+  border: 1px solid #ebebf0;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 0.875rem;
@@ -1013,6 +1116,11 @@ body.is-lock {
 
   .header__nav-button {
     padding: 15px 35px;
+  }
+
+  .modal__close-button {
+    top: 42px;
+    right: 30px;
   }
 }
 
@@ -1052,6 +1160,11 @@ body.is-lock {
 
   .footer__address {
     column-gap: 1.3rem;
+  }
+
+  .modal__close-button {
+    top: 37px;
+    right: 28px;
   }
 }
 
@@ -1294,6 +1407,16 @@ body.is-lock {
   .footer__menu--2cols {
     grid-template-columns: 1fr;
   }
+
+  .modal__close-button {
+    top: 38px;
+    right: 15px;
+    padding: 8px 10px;
+  }
+
+  .modal__dialog {
+    padding: 2.5rem 2.7rem;
+  }
 }
 
 /* 768pxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
@@ -1333,7 +1456,7 @@ body.is-lock {
   .header__features-text {
     font-size: 14px;
   }
-
+  
   .card__item {
     flex: 0 0 100%;
   }
@@ -1511,8 +1634,31 @@ body.is-lock {
   .footer__wrapper,
   .footer__legal {
     flex-direction: column;
-   row-gap: 1rem;
+    row-gap: 1rem;
     align-items: start;
+  }
+
+  .input__group-wrapper--vertical {
+    margin-bottom: 20px;
+  }
+
+  .modal__title {
+    margin-bottom: 10px;
+    font-size: 40px;
+  }
+
+  .modal__text {
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+
+  .cta__form-footer {
+    row-gap: 1.7rem;
+  }
+
+  .modal__close-button {
+    top: 35px;
+    right: 31px;
   }
 }
 
