--- a/styles/index.css
+++ b/styles/index.css
@@ -55,6 +55,18 @@ body {
   height: 4.625rem;
 }
 
+.header__navbar--light .logo__svg--light {
+  display: none;
+}
+
+.header__navbar--light .logo__svg--dark {
+  display: block;
+}
+
+.navbar--scroll {
+  height: 4.625rem;
+}
+
 .header__navbar--light .header__logo-path {
   fill: #292d33;
 }
@@ -120,7 +132,7 @@ body {
 }
 
 .header__contacts:hover {
-  color:#5c8ee5;;
+  color: #5c8ee5;
 }
 
 .header__contacts-icon {
@@ -419,7 +431,6 @@ body.is-lock {
 .mobile__menu-link {
   color: inherit;
   text-decoration: none;
-
 }
 
 .mobile__submenu-list {
@@ -427,7 +438,7 @@ body.is-lock {
   flex-direction: column;
   padding-inline: 20px;
   row-gap: 10px;
-    margin-block-start: 20px;
+  margin-block-start: 20px;
 }
 
 .mobile__submenu-item {
@@ -925,7 +936,7 @@ body.is-lock {
   display: flex;
   column-gap: 2.3rem;
   align-items: center;
-    transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .footer__phone {
@@ -938,7 +949,7 @@ body.is-lock {
 
 .footer__phone:hover,
 .footer__address :hover {
-color: #5c8ee5;
+  color: #5c8ee5;
 }
 
 .footer__bottom {
@@ -1094,6 +1105,25 @@ color: #5c8ee5;
   padding: 12px 16px;
   background-color: transparent;
   border: 1px solid #ebebf0;
+}
+
+.about-page {
+  padding-block-start: 100px;
+}
+
+.section__hero {
+  padding: 3.125rem;
+}
+
+.section__hero--bg-gray {
+  background-color: #f0f2f5;
+}
+
+.section__about-title {
+font-weight: 400;
+font-size: 80px;
+line-height: 1.2;
+color: var(--txt);
 }
 
 @media (max-width: 1700px) {
@@ -1417,11 +1447,11 @@ color: #5c8ee5;
     padding: 2.5rem 2.7rem;
   }
 
-    .blog-card__title {
+  .blog-card__title {
     font-size: 20px;
     line-height: 1.2;
   }
-  
+
   .blog-card__description {
     font-size: 14px;
   }
@@ -1464,7 +1494,7 @@ color: #5c8ee5;
   .header__features-text {
     font-size: 14px;
   }
-  
+
   .card__item {
     flex: 0 0 100%;
   }
@@ -1557,7 +1587,7 @@ color: #5c8ee5;
   .cta__form-footer {
     align-items: center;
     flex-direction: column;
-   row-gap: 2.5rem;
+    row-gap: 2.5rem;
   }
 
   .button--cta {
@@ -1659,7 +1689,7 @@ color: #5c8ee5;
     font-size: 14px;
     margin-bottom: 20px;
   }
-  
+
   .modal__close-button {
     top: 35px;
     right: 31px;
@@ -1677,7 +1707,7 @@ color: #5c8ee5;
   }
 
   .header__nav-button {
-    padding-inline: 2.375rem;
+    padding: 2rem 2.375rem;
   }
 
   .logo__svg {
